ingresses/3-proxy/overlays/whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: whoami-headers
        - name: whoami-basic-auth
  tls:
